--- a/next-tailwind-amazona/package.json
+++ b/next-tailwind-amazona/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "sst bind next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.332.0",
+    "@aws-sdk/s3-request-presigner": "^3.332.0",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -21,7 +23,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "aws-cdk-lib": "2.72.1",
+    "constructs": "10.1.156",
     "postcss": "^8.4.23",
+    "sst": "^2.8.21",
     "tailwindcss": "^3.3.2"
   }
 }
